<resources>
    <string name="app_name">My Diary</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_export">ExportActivity</string>
    <string name="title">Title</string>
    <string name="save">Save</string>
    <string name="category">Category</string>
    <string name="description">Description</string>
    <string name="place">Place</string>
    <string-array name="empty_places">
        <item>[Empty list]</item>
    </string-array>
    <string-array name="search_categories">
        <item>Title</item>
        <item>Category</item>
        <item>Date</item>
        <item>List all</item>
    </string-array>
    <string name="image">Image</string>
    <string name="create_event">Create Event</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="set_time">Set time</string>
    <string name="set_date">Set date</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_maps">Map</string>
    <string name="todays_events">Today\'s Events</string>
    <string name="search_events">Search Events</string>
    <string name="event_details">Event Details</string>
    <string name="get_all">Get all</string>
</resources>
